--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
-node_modules/
-package-lock.json/
-/server/config.env
+server/node_modules/*
+server/package-lock.json/*
+server/config.env
 
+client/node_modules/*
+client/package-lock.json/*
