--- a/server/package.json
+++ b/server/package.json
@@ -14,8 +14,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongodb": "^3.6.6",
-    "mongoose": "^5.12.4"
+    "mongoose": "^5.12.4",
+    "python-shell": "^5.0.0"
   },
-  "devDependencies": {},
   "description": ""
 }
